--- a/src/app/controls/type/keydown-input/keydown-input.component.html
+++ b/src/app/controls/type/keydown-input/keydown-input.component.html
@@ -1,6 +1,3 @@
 <mat-form-field>
-  <input
-    matInput
-    [formControl]="control"
-  />
+  <input matInput [formControl]="control" [placeholder]="displayName" />
 </mat-form-field>
