--- a/src/app/controls/type/time-picker/time-picker.component.html
+++ b/src/app/controls/type/time-picker/time-picker.component.html
@@ -1,18 +1,16 @@
-<mat-form-field [formGroup]="customForm">
+<mat-form-field>
   <div class="editable-dial-example">
     <input
       matInput
       readonly
       [ngxTimepicker]="tpicker"
-      placeholder="{{ controlItem.displayName }}"
-      [value]="controlItem.value"
-      formControlName="{{ controlItem.id }}"
+      [formControl]="control"
+      [placeholder]="displayName"
     />
     <ngx-material-timepicker
       class="timepicker"
       #tpicker
       [enableKeyboardInput]="true"
-      (timeSet)="setTimeValue($event)"
     ></ngx-material-timepicker>
   </div>
 </mat-form-field>
