--- a/src/app/tables/table-manager/table-manager.component.html
+++ b/src/app/tables/table-manager/table-manager.component.html
@@ -46,8 +46,26 @@
       </td>
     </ng-container>
 
-    <!-- 選項就直接在 Foreach 時加上 checkbox -->
     <!-- 直接建一個欄位是 控制功能相關的，在裡面塞按鈕 -->
+    <!-- Checkbox Column -->
+    <ng-container [matColumnDef]="'btn'" [stickyEnd]="true">
+      <th mat-header-cell *matHeaderCellDef>
+        <button mat-mini-fab color="warn"
+          *ngIf="isShowAddButton"
+          (click)="add()"
+        >Add</button>
+      </th>
+      <td mat-cell *matCellDef="let row;">
+        <button mat-mini-fab color="warn"
+          *ngIf="isShowEditButton"
+          (click)="edit(row)"
+        >Edit</button>
+        <button mat-mini-fab color="warn"
+          *ngIf="isShowDeleteButton"
+          (click)="delete(row)"
+        >Delete</button>
+      </td>
+    </ng-container>
     <!-- 新增/編輯的控制項定義就相當於是資料表的定義 -->
 
     <tr mat-header-row *matHeaderRowDef="AlldataElementsColumns"></tr>
