修正：CheckBoxList 多選無法抓取到值問題 調整：ControlItem dataSource 命名規則 value -> lable [用來呈現文字的命名而非值]

--- a/src/app/controls/type/checked-box/checked-box.component.html
+++ b/src/app/controls/type/checked-box/checked-box.component.html
@@ -13,14 +13,16 @@
       [formControl]="control"
       style="margin: 0 10px;"
       *ngFor="let r of dataSource"
-      >{{ r.value }}</mat-checkbox
+      >{{ r.lable }}</mat-checkbox
     >
   </div> -->
 
   <mat-selection-list [formControl]="control">
     {{ displayName }}
-    <mat-list-option *ngFor="let r of dataSource" [id]="r.key">
-      {{ r.value }}
+
+    <!-- 注意要記得給予 value 值，代表此控制項選擇的值， r.lable 是用來呈現給使用者的文字 -->
+    <mat-list-option *ngFor="let r of dataSource" [id]="r.key" [value]="r.key">
+      {{ r.lable }}
     </mat-list-option>
   </mat-selection-list>
 </ng-container>
