--- a/src/app/controls/type/drop-down-list/drop-down-list.component.html
+++ b/src/app/controls/type/drop-down-list/drop-down-list.component.html
@@ -3,7 +3,7 @@
   <mat-select [formControl]="control">
     <!-- <mat-option [value]="''">-- 請選擇 --</mat-option> -->
     <mat-option *ngFor="let r of dataSource" [value]="r.key">
-      {{ r.value }}
+      {{ r.lable }}
     </mat-option>
   </mat-select>
 </mat-form-field>
