--- a/src/app/controls/type/radio-button/radio-button.component.html
+++ b/src/app/controls/type/radio-button/radio-button.component.html
@@ -7,7 +7,7 @@
       [checked]="i === 0"
       [value]="r.key"
     >
-      {{ r.value }}
+      {{ r.lable }}
     </mat-radio-button>
   </mat-radio-group>
 </section>
