新增：通用表單元件可透過外部控制畫面上的元素 顯示/隱藏 新增：通用表單元件可透過外部控制表單的 啟用/停用 輸入

--- a/src/app/controls/type/date-picker/date-picker.component.html
+++ b/src/app/controls/type/date-picker/date-picker.component.html
@@ -1,17 +1,16 @@
-<mat-form-field>
-  <input
-    matInput
-    readonly
-    [matDatepicker]="tpicker"
-    [formControl]="control"
-    [placeholder]="displayName"
-  />
-  <mat-datepicker-toggle
-    matSuffix
-    [for]="tpicker"
-  ></mat-datepicker-toggle>
-  <mat-datepicker #tpicker></mat-datepicker>
-</mat-form-field>
+<div [hidden]="isHidden">
+  <mat-form-field>
+    <input
+      matInput
+      readonly
+      [matDatepicker]="tpicker"
+      [formControl]="control"
+      [placeholder]="displayName"
+    />
+    <mat-datepicker-toggle matSuffix [for]="tpicker"></mat-datepicker-toggle>
+    <mat-datepicker #tpicker></mat-datepicker>
+  </mat-form-field>
 
-    <!-- (dateChange)="setTimeValue($event)"
+  <!-- (dateChange)="setTimeValue($event)"
     [value]="controlItem.value" -->
+</div>
