--- a/src/app/controls/type/keydown-input/keydown-input.component.html
+++ b/src/app/controls/type/keydown-input/keydown-input.component.html
@@ -1,3 +1,5 @@
-<mat-form-field>
-  <input matInput [formControl]="control" [placeholder]="displayName" />
-</mat-form-field>
+<div [hidden]="isHidden">
+  <mat-form-field>
+    <input matInput [formControl]="control" [placeholder]="displayName" />
+  </mat-form-field>
+</div>
