--- a/src/app/controls/type/slide-toggle/slide-toggle.component.html
+++ b/src/app/controls/type/slide-toggle/slide-toggle.component.html
@@ -1,3 +1,5 @@
-<mat-slide-toggle labelPosition="before" [formControl]="control">
-  {{ displayName }}
-</mat-slide-toggle>
+<div [hidden]="isHidden">
+  <mat-slide-toggle labelPosition="before" [formControl]="control">
+    {{ displayName }}
+  </mat-slide-toggle>
+</div>
