--- a/src/app/controls/type/time-picker/time-picker.component.html
+++ b/src/app/controls/type/time-picker/time-picker.component.html
@@ -1,16 +1,18 @@
-<mat-form-field>
-  <div class="editable-dial-example">
-    <input
-      matInput
-      readonly
-      [ngxTimepicker]="tpicker"
-      [formControl]="control"
-      [placeholder]="displayName"
-    />
-    <ngx-material-timepicker
-      class="timepicker"
-      #tpicker
-      [enableKeyboardInput]="true"
-    ></ngx-material-timepicker>
-  </div>
-</mat-form-field>
+<div [hidden]="isHidden">
+  <mat-form-field>
+    <div class="editable-dial-example">
+      <input
+        matInput
+        readonly
+        [ngxTimepicker]="tpicker"
+        [formControl]="control"
+        [placeholder]="displayName"
+      />
+      <ngx-material-timepicker
+        class="timepicker"
+        #tpicker
+        [enableKeyboardInput]="true"
+      ></ngx-material-timepicker>
+    </div>
+  </mat-form-field>
+</div>
