--- a/src/app/controls/type/checked-box/checked-box.component.html
+++ b/src/app/controls/type/checked-box/checked-box.component.html
@@ -1,13 +1,14 @@
-<!-- 一般勾選項 true/false -->
-<ng-container *ngIf="!dataSource">
-  <mat-checkbox labelPosition="before" [formControl]="control">
-    {{ displayName }}
-  </mat-checkbox>
-</ng-container>
+<div [hidden]="isHidden">
+  <!-- 一般勾選項 true/false -->
+  <ng-container *ngIf="!dataSource">
+    <mat-checkbox labelPosition="before" [formControl]="control">
+      {{ displayName }}
+    </mat-checkbox>
+  </ng-container>
 
-<!-- 多選單勾選 -->
-<ng-container *ngIf="dataSource">
-  <!-- <div>
+  <!-- 多選單勾選 -->
+  <ng-container *ngIf="dataSource">
+    <!-- <div>
     {{ displayName }}
     <mat-checkbox
       [formControl]="control"
@@ -17,12 +18,17 @@
     >
   </div> -->
 
-  <mat-selection-list [formControl]="control">
-    {{ displayName }}
+    <mat-selection-list [formControl]="control">
+      {{ displayName }}
 
-    <!-- 注意要記得給予 value 值，代表此控制項選擇的值， r.lable 是用來呈現給使用者的文字 -->
-    <mat-list-option *ngFor="let r of dataSource" [id]="r.key" [value]="r.key">
-      {{ r.lable }}
-    </mat-list-option>
-  </mat-selection-list>
-</ng-container>
+      <!-- 注意要記得給予 value 值，代表此控制項選擇的值， r.lable 是用來呈現給使用者的文字 -->
+      <mat-list-option
+        *ngFor="let r of dataSource;"
+        [id]="r.key"
+        [value]="r.key"
+      >
+        {{ r.lable }}
+      </mat-list-option>
+    </mat-selection-list>
+  </ng-container>
+</div>
