新增：在各自定義的 Custom FormControl 處理          - 支援傳入設定檔，動態設定使用者輸入內容格式驗證規則          - 支援使用者自訂驗證規則 調整：CheckBoxList 樣式寬度

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -38,6 +38,10 @@
 
 <hr />
 <FieldSet>
+  <Legend>表單檢查結果</Legend>
+  <pre>{{ !myForm.customForm.invalid | json }}</pre>
+</FieldSet>
+<FieldSet>
   <Legend>即時查看使用者查詢條件輸入狀況</Legend>
   <pre>{{ myForm.customForm.value | json }}</pre>
 </FieldSet>
