--- a/src/app/controls/type/checked-box/checked-box.component.html
+++ b/src/app/controls/type/checked-box/checked-box.component.html
@@ -18,17 +18,19 @@
     >
   </div> -->
 
-    <mat-selection-list [formControl]="control">
-      {{ displayName }}
+    <div style="width: 180px;">
+      <mat-selection-list [formControl]="control">
+        {{ displayName }}
 
-      <!-- 注意要記得給予 value 值，代表此控制項選擇的值， r.lable 是用來呈現給使用者的文字 -->
-      <mat-list-option
-        *ngFor="let r of dataSource;"
-        [id]="r.key"
-        [value]="r.key"
-      >
-        {{ r.lable }}
-      </mat-list-option>
-    </mat-selection-list>
+        <!-- 注意要記得給予 value 值，代表此控制項選擇的值， r.lable 是用來呈現給使用者的文字 -->
+        <mat-list-option
+          *ngFor="let r of dataSource;"
+          [id]="r.key"
+          [value]="r.key"
+        >
+          {{ r.lable }}
+        </mat-list-option>
+      </mat-selection-list>
+    </div>
   </ng-container>
 </div>
