調整：不符合實際功能認知的變數命名 新增：資料表元件的勾選欄位可由外部控制顯示/隱藏 修正：資料表元件由外部元件控制批次刪除無作用問題

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,7 @@
   [dataSource]="dataTableSource"
   [tableSchema]="tableSchema"
   [reportName]="reportName"
+  [isShowCheckBox]="true"
   [isShowAddButton]="true"
   [isShowEditButton]="true"
   [isShowDeleteButton]="true"
