--- a/src/app/page/footer/footer.component.html
+++ b/src/app/page/footer/footer.component.html
@@ -1,2 +1,5 @@
-<hr />
-<p>Footer Block</p>
+<footer class="footer">
+  <div class="container">
+      <span class="text-muted">Demo Angular Material. Copyright © 2020 JC. All rights reserved.</span>
+  </div>
+</footer>
