--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,14 +1,3 @@
-<div>
-  <div class="container">
-    <div class="row main-menu">
-      <div class="col"></div>
-      <div class="col menu-item"><a href="/main1">小資料量報表</a></div>
-      <div class="col menu-item"><a href="/main2">大資料量報表</a></div>
-      <div class="col"></div>
-    </div>
-    <hr />
-    <div class="main-menu">
-      <router-outlet></router-outlet>
-    </div>
-  </div>
-</div>
+<content>
+  <router-outlet></router-outlet>
+</content>
