--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,372 @@
 .timepicker {
   z-index: 10000 !important;
 }
+
+
+* {
+  transition: 1s !important;
+  -webkit-transition: 1s !important;
+}
+
+/*頁面框架排版*/
+body,
+html {
+  width: 100%;
+  height: 100%;
+  margin: 0px;
+  font-size: 13px;
+  font-family: '微軟正黑體';
+  min-height: 450px;
+  min-width: 650px;
+  color: #464B4D;
+}
+
+content,
+header,
+footer {
+  width: 100%;
+  min-width: 900px;
+  height: auto;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.container {
+  width: 100%;
+  max-width: 900px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+footer
+{
+  width: 100%;
+  height: 50px;
+  line-height: 50px;
+  background-color: #f5f5f5;
+  position: fixed;
+  bottom: 0;
+}
+
+/*元件樣式(以字母排序)*/
+#A_ForgetPW {
+  color: #AAAAAA;
+  font-size: 13px;
+  line-height: 45px;
+}
+
+#A_ForgetPW:hover {
+  color: #304F67;
+}
+
+
+.btn {
+  cursor: pointer;
+}
+
+.Btn_LWidth {
+  width: 100%;
+  height: 35px;
+  border: none;
+  border-radius: 3px;
+}
+
+.Btn_SWidth {
+  width: 100%;
+  height: 25px;
+  border: none;
+  border-radius: 3px;
+}
+
+.Btn_Left
+{
+  min-width: 80px;
+  margin: 5px;
+}
+
+.Btn_Right
+{
+  float: right;
+  min-width: 80px;
+  margin: 5px;
+  margin-right: 0px;
+}
+
+.Btn_Gray
+{
+  background-color: #DDDDDD;
+}
+
+.Btn_Gray:hover
+{
+  background-color: #B9B9B9;
+}
+
+.Btn_Red
+{
+  background-color: #E0CACA;
+}
+
+.Btn_Red:hover
+{
+  background-color: #D9B2B2;
+}
+
+.Btn_MaxWidth
+{
+  width: 100%;
+  height: 35px;
+}
+
+.BG_White
+{
+  background-color: white;
+}
+
+#Backgrond_Black
+{
+  background-color: rgba(0,0,0,0.8);
+  filter: alpha(opacity=60);
+  opacity: 0.6;
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+#Btn_Login
+{
+  background-color: #203342;
+  color: rgba(255, 255, 255, 0.8);
+  margin-top: 5px;
+  margin-bottom: 5px;
+}
+
+#Btn_Login:hover {
+  background-color: #23272b;
+  box-shadow: 3px 3px 10px rgba(50, 50, 50, 0.3);
+}
+
+
+.Div_Login {
+  width: 380px;
+  height: 480px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 100px;
+  border: solid 1px rgba(218, 223, 227, 0.2);
+  border-radius: 5px;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 3px 3px 10px rgba(50, 50, 50, 0.3);
+}
+
+#Div_PageTitle {
+  background-color: #DEE6EB;
+  height:50px;
+  text-align:center;
+  line-height:50px;
+}
+
+
+#Div_StatusTitle
+{
+  border: solid 1px #e9ecef;
+  border-radius:5px;
+  padding:10px;
+  padding-top:20px;
+  padding-bottom:20px;
+
+}
+
+#Div_ResetPW
+{
+  border: solid 1px #DDDDDD;
+  border-radius: 3px;
+  height: 230px;
+  width: 400px;
+  padding: 30px;
+  padding-top: 80px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: 150px;
+  background-color: rgba(255, 255, 255, 0.9);
+  box-shadow: 3px 3px 10px rgba(50, 50, 50, 0.3);
+  z-index:2;
+}
+
+#Div_Clear {
+  clear: both;
+}
+
+.div_space {
+height:50px;
+}
+
+.Div_PaddingLeft
+{
+  padding-left:8px;
+}
+
+hr {
+  margin: 0px;
+  border: none;
+  height: 3px;
+  border-bottom: solid 1px #e9ecef;
+  margin-bottom: 5px;
+}
+
+.hr _bolder
+{
+  border-bottom: solid 3px #e9ecef;
+  margin-bottom: 5px;
+}
+
+
+#Nav_Select_Lan
+{
+  width: 100px;
+  margin-left: auto;
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+}
+
+#Nav_Select_Lan option
+{
+  background-color: rgb(29, 33, 36);
+}
+
+#Nav_Select_Lan:hover
+{
+  border: none;
+  background-color: rgb(29, 33, 36);
+}
+
+#Nav_Btn_Logout
+{
+  width: 80px;
+  cursor: pointer;
+}
+
+.nav-link:hover
+{
+  color: #ED7000 !important;
+}
+
+
+.P_LoginTitle
+{
+  font-size: 28px;
+  font-weight: bolder;
+}
+
+
+.P_Copyright {
+  color: #464B4D;
+  font-size: 12px;
+}
+
+.P_ConfirmString
+{
+  font-size:15px;
+  padding-left:10px;
+}
+
+
+.Page_Title
+{
+  font-size: 16px;
+  font-weight: bolder;
+}
+
+.P_StatusTitle
+{
+  font-size: 15px;
+  font-weight: bolder;
+  display: inline-block;
+  border-bottom: solid 2px #CCCCCC;
+  width: 100%;
+  padding-bottom: 5px;
+}
+
+.P_StatusContent
+{
+  color: #567D2D;
+  font-size: 14px;
+  line-height: 30px;
+  vertical-align: middle;
+  padding-left: 5px;
+  margin-top: 5px;
+}
+
+.P_Title
+{
+  font-size: 14px;
+  font-weight: bolder;
+}
+
+.P_Title_Style2 {
+  color: #ED7000;
+  font-size: 15px;
+  font-weight: bolder;
+  border-radius: 3px;
+  display: inline;
+  vertical-align: middle;
+  line-height: 30px;
+}
+
+.P_Title_Style3
+{
+  font-size: 14px;
+  font-weight: bolder;
+}
+
+input#TB_UserID,
+input#TB_UserPW,
+select#Select_Lan
+{
+  background-color: transparent;
+  height: 35px !important;
+}
+
+input[id=TB_UserID]:hover,
+input[id=TB_UserPW]:hover,
+select[id=Select_Lan]:hover
+{
+  border: solid 1px #304F67;
+}
+
+
+#Talbe_Ping.table td, #Talbe_Ping.table th
+{
+  vertical-align: middle !important;
+  height: 50px !important;
+}
+
+#Table_Setting
+{
+  vertical-align: middle !important;
+  height: 30px !important;
+}
+
+.TD_Center
+{
+  text-align: center;
+}
+
+.TB_Login
+{
+  border-collapse: collapse;
+  width: 100%;
+}
+
+.TB_Login td
+{
+  padding-left: 20px;
+  padding-right: 20px;
+}
