新增：POC 用 萬用資料表呈現

--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -1,3 +1,11 @@
 <content>
-  <router-outlet></router-outlet>
+  <div id="Div_PageTitle">
+    <span class="Page_Title">{{ PageTitle }}</span>
+  </div>
+  <div class="container">
+    <br />
+    <div>
+      <router-outlet></router-outlet>
+    </div>
+  </div>
 </content>
