--- a/src/app/page/main/main.component.html
+++ b/src/app/page/main/main.component.html
@@ -2,7 +2,7 @@
   <div id="Div_PageTitle">
     <span class="Page_Title">{{ PageTitle }}</span>
   </div>
-  <div class="container">
+  <div class="container" style="max-width: max-content">
     <br />
     <div>
       <router-outlet></router-outlet>
