--- a/src/app/tables/table-manager/table-manager.component.html
+++ b/src/app/tables/table-manager/table-manager.component.html
@@ -20,7 +20,7 @@
         >
         </mat-checkbox>
       </th>
-      <td mat-cell *matCellDef="let row;">
+      <td mat-cell *matCellDef="let row">
         <mat-checkbox
           (click)="$event.stopPropagation()"
           (change)="changeSelected($event, row)"
@@ -33,42 +33,59 @@
 
     <!-- RowData Column -->
     <ng-container
-      *ngFor="let column of getColumns();"
-      [sticky]="setStickyColumn(column.key)"
-      [stickyEnd]="setStickyEndColumn(column.key)"
+      *ngFor="let column of getColumns()"
       [matColumnDef]="column.key"
     >
       <th mat-header-cell class="text-center px-4" *matHeaderCellDef>
         {{ column.value }}
       </th>
-      <td mat-cell class="text-center px-4" *matCellDef="let element;">
+      <td mat-cell class="text-center px-4" *matCellDef="let element">
         {{ element[column.key] }}
       </td>
     </ng-container>
 
     <!-- 直接建一個欄位是 控制功能相關的，在裡面塞按鈕 -->
     <!-- Checkbox Column -->
-    <ng-container *ngIf="isShowCheckBox" [matColumnDef]="'btn'" [stickyEnd]="true">
+    <ng-container
+      *ngIf="isShowCheckBox"
+      [matColumnDef]="'btn'"
+      [stickyEnd]="true"
+    >
       <th mat-header-cell *matHeaderCellDef>
-        <button mat-mini-fab color="warn"
+        <button
+          mat-mini-fab
+          color="warn"
           *ngIf="isShowAddButton"
           (click)="add()"
-        >Add</button>
+        >
+          Add
+        </button>
       </th>
-      <td mat-cell *matCellDef="let row;">
-        <button mat-mini-fab color="warn"
+      <td mat-cell *matCellDef="let row">
+        <button
+          mat-mini-fab
+          color="warn"
           *ngIf="isShowEditButton"
           (click)="edit(row)"
-        >Edit</button>
-        <button mat-mini-fab color="warn"
+        >
+          Edit
+        </button>
+        <button
+          mat-mini-fab
+          color="warn"
           *ngIf="isShowDeleteButton"
           (click)="delete(row)"
-        >Delete</button>
+        >
+          Delete
+        </button>
       </td>
     </ng-container>
     <!-- 新增/編輯的控制項定義就相當於是資料表的定義 -->
 
-    <tr mat-header-row *matHeaderRowDef="AlldataElementsColumns; sticky: true"></tr>
+    <tr
+      mat-header-row
+      *matHeaderRowDef="AlldataElementsColumns; sticky: true"
+    ></tr>
     <tr mat-row *matRowDef="let row; columns: AlldataElementsColumns"></tr>
   </table>
 </div>
