--- a/src/app/controls/type/slide-toggle/slide-toggle.component.html
+++ b/src/app/controls/type/slide-toggle/slide-toggle.component.html
@@ -1,5 +1,5 @@
-<div [hidden]="isHidden">
+<div [hidden]="controlItem?.hidden">
   <mat-slide-toggle labelPosition="before" [formControl]="control">
-    {{ displayName }}
+    {{ controlItem?.displayName }}
   </mat-slide-toggle>
 </div>
