--- a/src/app/controls/type/drop-down-list/drop-down-list.component.html
+++ b/src/app/controls/type/drop-down-list/drop-down-list.component.html
@@ -1,9 +1,9 @@
-<div [hidden]="isHidden">
+<div [hidden]="controlItem?.hidden">
   <mat-form-field>
-    <mat-label>{{ displayName }}</mat-label>
+    <mat-label>{{ controlItem?.displayName }}</mat-label>
     <mat-select [formControl]="control">
       <!-- <mat-option [value]="''">-- 請選擇 --</mat-option> -->
-      <mat-option *ngFor="let r of dataSource;" [value]="r.key">
+      <mat-option *ngFor="let r of controlItem?.dataSource" [value]="r.key">
         {{ r.lable }}
       </mat-option>
     </mat-select>
