新增：查詢條件搭配資料表 POC 畫面初始化

--- a/src/app/page/main/filter-table-manager-demo/filter-table-manager-demo.component.html
+++ b/src/app/page/main/filter-table-manager-demo/filter-table-manager-demo.component.html
@@ -1,1 +1,12 @@
-<p>filter-table-manager-demo works!</p>
+<app-form-controls #tform [dataSource]="controlData"></app-form-controls>
+
+<FieldSet>
+  <Legend>表單檢查結果</Legend>
+  <pre>{{ !tform.customForm.invalid | json }}</pre>
+</FieldSet>
+
+<app-table-manager
+  [dataSource]="dataTableSource"
+  [tableSchema]="tableSchema"
+  [reportName]="reportName"
+></app-table-manager>
