--- a/src/app/tables/table-manager/paginator/paginator.component.html
+++ b/src/app/tables/table-manager/paginator/paginator.component.html
@@ -6,9 +6,9 @@
   (page)="changePageEvent($event)"
 ></mat-paginator>
 
-<div *ngIf="pageEvent">
+<!-- <div *ngIf="pageEvent">
   <h5>Page Change Event Properties</h5>
   <div>List length: {{ pageEvent.length }}</div>
   <div>Page size: {{ pageEvent.pageSize }}</div>
   <div>Page index: {{ pageEvent.pageIndex }}</div>
-</div>
+</div> -->
