新增：四種應用類型測試資料 調整：dataService 改為呼叫 API 取得設定資料

--- a/src/app/page/main/form-manager-demo/form-manager-demo.component.html
+++ b/src/app/page/main/form-manager-demo/form-manager-demo.component.html
@@ -9,6 +9,6 @@
   <span class="P_Title_Style2">表單檢查結果</span>
   <hr class="hr _bolder" />
   <div class="Div_PaddingLeft">
-    <pre>{{ !tform.customForm.invalid | json }}</pre>
+    <pre>{{ !tform.customForm?.invalid | json }}</pre>
   </div>
 </div>
