--- a/src/app/controls/form-controls/form-controls.component.html
+++ b/src/app/controls/form-controls/form-controls.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" *ngIf="dataSource">
   <div class="row align-items-center">
     <form [formGroup]="customForm">
       <ng-container *ngFor="let item of dataSource; let i = index;">
